[JAVA-22519] Move articles from generic libraries module to specific library modules (#15416)